--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -21,6 +21,10 @@ dataSources:
       abis:
         - name: LoopringV3
           file: ./abis/LoopringV3.json
+        - name: ExchangeProxy
+          file: ./abis/ExchangeProxy.json
+        - name: ExchangeV3
+          file: ./abis/ExchangeV3.json
       eventHandlers:
         - event: ExchangeInitialized(indexed uint256,indexed address,indexed address,address,bool)
           handler: handleExchangeInitialized
@@ -54,10 +58,50 @@ templates:
       language: wasm/assemblyscript
       file: ./src/index.ts
       entities:
-        - FinancialContract
+        - Exchange
       abis:
         - name: ERC20
           file: ./abis/ERC20.json
       eventHandlers:
         - event: Transfer(indexed address,indexed address,uint256)
           handler: handleTransfer
+  - name: ExchangeV3
+    kind: ethereum/contract
+    network: mainnet
+    source:
+      abi: ExchangeV3
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/index.ts
+      entities:
+        - Exchange
+      abis:
+        - name: ExchangeV3
+          file: ./abis/ExchangeV3.json
+      eventHandlers:
+        - event: AccountCreated(indexed address,indexed uint24,uint256,uint256)
+          handler: handleAccountCreated
+        - event: BlockVerified(indexed uint256)
+          handler: handleBlockVerified
+  # - AccountCreated(indexed address,indexed uint24,uint256,uint256)
+  # - AccountUpdated(indexed address,indexed uint24,uint256,uint256)
+  # - AddressWhitelistChanged(indexed uint256,address,address)
+  # - BlockCommitted(indexed uint256,indexed bytes32)
+  # - BlockFeeWithdrawn(indexed uint256,uint256)
+  # - BlockFinalized(indexed uint256)
+  # - BlockVerified(indexed uint256)
+  # - Cloned(indexed address)
+  # - DepositRequested(indexed uint256,indexed uint24,indexed uint16,uint96,uint256,uint256)
+  # - FeesUpdated(indexed uint256,uint256,uint256,uint256,uint256)
+  # - OperatorChanged(indexed uint256,address,address)
+  # - OwnershipTransferred(indexed address,indexed address)
+  # - ProtocolFeesUpdated(uint8,uint8,uint8,uint8)
+  # - Revert(indexed uint256)
+  # - Shutdown(uint256)
+  # - TokenNotOwnedByUsersWithdrawn(address,address,address,uint256)
+  # - TokenRegistered(indexed address,indexed uint16)
+  # - WithdrawalCompleted(indexed uint24,indexed uint16,address,uint96)
+  # - WithdrawalFailed(indexed uint24,indexed uint16,address,uint96)
+  # - WithdrawalRequested(indexed uint256,indexed uint24,indexed uint16,uint96)
