--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -17,7 +17,7 @@ dataSources:
       language: wasm/assemblyscript
       file: ./src/index.ts
       entities:
-        - InterfaceImplementation
+        - User
       abis:
         - name: LRC
           file: ./abis/LRC.json
@@ -26,6 +26,29 @@ dataSources:
           handler: handleLRCTransfer
         - event: Burn(indexed address,uint256)
           handler: handleLRCBurn
+  - kind: ethereum/contract
+    name: BlockVerifier
+    network: mainnet
+    source:
+      address: "0x40598b41cc17a7e56dd72f415e8223aacca94cf7"
+      abi: BlockVerifier
+      startBlock: 8967564
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      file: ./src/index.ts
+      entities:
+        - Circuit
+        - Block
+      abis:
+        - name: BlockVerifier
+          file: ./abis/BlockVerifier.json
+      eventHandlers:
+        - event: CircuitRegistered(indexed uint8,bool,uint16,uint8)
+          handler: handleCircuitRegistered
+        - event: CircuitDisabled(indexed uint8,bool,uint16,uint8)
+          handler: handleCircuitDisabled
   - kind: ethereum/contract
     name: LoopringV3
     network: mainnet
