Added block data indexing, address whitelist and fees updated

--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -142,20 +142,24 @@ templates:
           handler: handleOperatorChanged
         - event: ProtocolFeesUpdated(uint8,uint8,uint8,uint8)
           handler: handleProtocolFeesUpdated
+        - event: FeesUpdated(indexed uint256,uint256,uint256,uint256,uint256)
+          handler: handleFeesUpdated
+        - event: AddressWhitelistChanged(indexed uint256,address,address)
+          handler: handleAddressWhitelistChanged
   # + AccountCreated(indexed address,indexed uint24,uint256,uint256)
   # + AccountUpdated(indexed address,indexed uint24,uint256,uint256)
-  # - AddressWhitelistChanged(indexed uint256,address,address)
-  # / BlockCommitted(indexed uint256,indexed bytes32)
-  # - BlockFeeWithdrawn(indexed uint256,uint256)
-  # / BlockFinalized(indexed uint256)
-  # / BlockVerified(indexed uint256)
+  # / AddressWhitelistChanged(indexed uint256,address,address)
+  # + BlockCommitted(indexed uint256,indexed bytes32)
+  # + BlockFeeWithdrawn(indexed uint256,uint256)
+  # + BlockFinalized(indexed uint256)
+  # + BlockVerified(indexed uint256)
   # - Cloned(indexed address)
   # - DepositRequested(indexed uint256,indexed uint24,indexed uint16,uint96,uint256,uint256)
-  # - FeesUpdated(indexed uint256,uint256,uint256,uint256,uint256)
-  # / OperatorChanged(indexed uint256,address,address)
+  # / FeesUpdated(indexed uint256,uint256,uint256,uint256,uint256)
+  # + OperatorChanged(indexed uint256,address,address)
   # - OwnershipTransferred(indexed address,indexed address)
-  # / ProtocolFeesUpdated(uint8,uint8,uint8,uint8)
-  # / Revert(indexed uint256)
+  # + ProtocolFeesUpdated(uint8,uint8,uint8,uint8)
+  # + Revert(indexed uint256)
   # - Shutdown(uint256)
   # - TokenNotOwnedByUsersWithdrawn(address,address,address,uint256)
   # + TokenRegistered(indexed address,indexed uint16)
