Added on chain transaction events

--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -146,16 +146,24 @@ templates:
           handler: handleFeesUpdated
         - event: AddressWhitelistChanged(indexed uint256,address,address)
           handler: handleAddressWhitelistChanged
+        - event: DepositRequested(indexed uint256,indexed uint24,indexed uint16,uint96,uint256,uint256)
+          handler: handleDepositRequested
+        - event: WithdrawalCompleted(indexed uint24,indexed uint16,address,uint96)
+          handler: handleWithdrawalCompleted
+        - event: WithdrawalFailed(indexed uint24,indexed uint16,address,uint96)
+          handler: handleWithdrawalFailed
+        - event: WithdrawalRequested(indexed uint256,indexed uint24,indexed uint16,uint96)
+          handler: handleWithdrawalRequested
   # + AccountCreated(indexed address,indexed uint24,uint256,uint256)
   # + AccountUpdated(indexed address,indexed uint24,uint256,uint256)
-  # / AddressWhitelistChanged(indexed uint256,address,address)
+  # + AddressWhitelistChanged(indexed uint256,address,address)
   # + BlockCommitted(indexed uint256,indexed bytes32)
   # + BlockFeeWithdrawn(indexed uint256,uint256)
   # + BlockFinalized(indexed uint256)
   # + BlockVerified(indexed uint256)
   # - Cloned(indexed address)
-  # - DepositRequested(indexed uint256,indexed uint24,indexed uint16,uint96,uint256,uint256)
-  # / FeesUpdated(indexed uint256,uint256,uint256,uint256,uint256)
+  # + DepositRequested(indexed uint256,indexed uint24,indexed uint16,uint96,uint256,uint256)
+  # + FeesUpdated(indexed uint256,uint256,uint256,uint256,uint256)
   # + OperatorChanged(indexed uint256,address,address)
   # - OwnershipTransferred(indexed address,indexed address)
   # + ProtocolFeesUpdated(uint8,uint8,uint8,uint8)
@@ -163,6 +171,6 @@ templates:
   # - Shutdown(uint256)
   # - TokenNotOwnedByUsersWithdrawn(address,address,address,uint256)
   # + TokenRegistered(indexed address,indexed uint16)
-  # - WithdrawalCompleted(indexed uint24,indexed uint16,address,uint96)
-  # - WithdrawalFailed(indexed uint24,indexed uint16,address,uint96)
-  # - WithdrawalRequested(indexed uint256,indexed uint24,indexed uint16,uint96)
+  # + WithdrawalCompleted(indexed uint24,indexed uint16,address,uint96)
+  # + WithdrawalFailed(indexed uint24,indexed uint16,address,uint96)
+  # + WithdrawalRequested(indexed uint256,indexed uint24,indexed uint16,uint96)
